--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 remote_theme: pages-themes/minimal@v0.2.0
 
-title: Лабораторная ратопа по Функциональному программированию
-description:
+title: Лабораторная работа по Функциональному программированию
+description: Здесь находится документация к компилятору
